Fix links to fetch from the 2020 namespace

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:description" content="Silicon Maze - The Triwizard Tournament" />
     <meta property="og:image" content="https://raw.githubusercontent.com/Silicon-Maze/silicon-maze.github.io/master/img/LOGO.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://silicon-maze.github.io/" />
+    <meta property="og:url" content="https://silicon-maze.github.io/2020/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="https://silicon-maze.github.io/">
+    <meta name="twitter:site" content="https://silicon-maze.github.io/2020/">
     <meta name="twitter:title" content="Silicon Maze">
     <meta name="twitter:description" content="Silicon Maze - The Triwizard Tournament">
     <meta name="twitter:image:src" content="/img/LOGO.jpg">
@@ -69,7 +69,7 @@
                 <nav class="classy-navbar justify-content-between" id="MAZ3{iamWhatYouAreLookingFor}">
 
                     <!-- Logo -->
-                    <a class="nav-brand" href=""><img style="height: auto;width: auto;max-height: 72px;max-width: 250px;" src="/img/Logo.png"></a>
+                    <a class="nav-brand" href=""><img style="height: auto;width: auto;max-height: 72px;max-width: 250px;" src="img/Logo.png"></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler">
@@ -107,7 +107,7 @@
               <span class="head-sub">The triwizard tournament</span>
             </h1>
             <h2 class="event-date">July 25-26 2020</h2>
-            <a href="https://p.hck.re/ABCz" class="btn btn-white btn-anim">Register</a>
+<!--             <a href="https://p.hck.re/ABCz" class="btn btn-white btn-anim">Register</a> -->
           </div>
     </section>
     <!-- Welcome Area End -->
@@ -136,7 +136,7 @@
                 <!-- About Thumb -->
                 <div class="col-12 px-5 m-0 p-md-0 col-md-6 order-1 order-lg-2">
                     <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <img src="/img/LOGO.jpg" alt="silicon maze Logo">
+                        <img src="img/LOGO.jpg" alt="silicon maze Logo">
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <!-- About Thumb -->
                 <div class="col-6 col-md-6 order-1 order-lg-2 d-flex justify-content-center">
                     <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <img src="/img/tracks/algorithm.png" alt="Algorithms">
+                        <img src="img/tracks/algorithm.png" alt="Algorithms">
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 <!-- About Thumb -->
                 <div class="col-6 col-md-6 order-1 order-lg-1 d-flex justify-content-center">
                     <div class="about-thumb mb-80 wow fadeInUp" data-wow-delay="300ms">
-                        <img src="/img/tracks/ml.svg" alt="AI - ML" style="float:right">
+                        <img src="img/tracks/ml.svg" alt="AI - ML" style="float:right">
                     </div>
                 </div>
 
@@ -197,7 +197,7 @@
                 <!-- About Thumb -->
                 <div class="col-12 col-md-6 order-1 order-lg-2">
                     <div class="about-thumb mb-80 p-4 wow fadeInUp d-flex justify-content-center" data-wow-delay="300ms">
-                        <img class="ctf-img" src="/img/tracks/ctf.svg" alt="Capture the Flag">
+                        <img class="ctf-img" src="img/tracks/ctf.svg" alt="Capture the Flag">
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                 <!-- About Thumb -->
                 <div class="col-6 col-md-6 order-1 order-lg-1 d-flex justify-content-center">
                     <div class="about-thumb mb-80 wow p-4 fadeInUp" data-wow-delay="300ms">
-                        <img class="dev-img" src="/img/tracks/dev.svg" alt="web Dev" style="float:right;">
+                        <img class="dev-img" src="img/tracks/dev.svg" alt="web Dev" style="float:right;">
                     </div>
                 </div>
 
@@ -389,15 +389,15 @@
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="/js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="/js/popper.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="/js/confer.bundle.js"></script>
+    <script src="js/confer.bundle.js"></script>
     <!-- Active -->
-    <script src="/js/default-assets/active.js"></script>
+    <script src="js/default-assets/active.js"></script>
     <script src="https://use.fontawesome.com/940386bfc9.js"></script>
     <script>
         var mobile = document.getElementById('mobile');
